--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 code {
-    background: #2db34a;
+    background: #e20074;
     border-radius: 6px;
     color: #fff;
     display: block;
@@ -11,16 +11,22 @@ code {
   section,
   aside,
   footer,
-  .breakrow {
-    margin: 0 1.5% 24px 1.5%;
+  .breakrow,
+  .dropbtn,
+  .menusection {
+    margin: 0 0.5% 24px 0.5%;
   }
   section {
     float: left;
-    width: 22%;
+    width: 19%;
+  }
+  section:hover {
+    transition: transform .2s; /* Animation */
+    transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
   .breakrow {
     clear: both;
-    background-color: black;
+    background-color: #fe0075;
     color: white;
     /*width: 22%;
     /*margin: 0 1.5% 24px 1.5%;*/
@@ -30,3 +36,88 @@ code {
     /*margin-bottom: 0;*/
   }
   
+  /*  menu structure */
+
+  .menusection{
+    font-size: 0px;
+    border-radius: 6px;
+    box-sizing: border-box;
+  }
+
+  /* Style The Dropdown Button */
+  /*.dropbtn {
+    border-radius: 6px;
+    background-color: #4CAF50;
+    color: white;
+    width: 24%;
+    float: left;
+    border: none;
+    cursor: pointer;
+
+    font: 14px/24px "Source Code Pro", Inconsolata, "Lucida Console", Terminal, "Courier New", Courier;
+    padding: 24px 15px;
+    text-align: center;
+  }*/
+
+ 
+
+  /* Style The Dropdown Button */
+.dropbtn {
+  box-sizing: border-box;
+  float:left;
+  background-color: #ededed;
+  color: 161616;
+  /*padding: 16px;*/
+  /*font-size: 16px;*/
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  height: 70px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  box-sizing: border-box;
+  display: inline-block;
+  width: 25%;
+  position: relative;
+  
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  font-size: 16px;
+  display: none;
+  position: absolute;
+  /*top: 280px;*/
+  top: 70px;  /* this is the height of the button!!!*/
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #ff1493;
+}
